logs/django-cms-fragments.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cms_fragments'...
Listing './lib/python3.5/site-packages/cms_fragments/static'...
Listing './lib/python3.5/site-packages/cms_fragments/static/acecss'...
Listing './lib/python3.5/site-packages/cms_fragments/static/acejs'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/images'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/langs'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/plugins'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/plugins/charmap'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/plugins/charmap/css'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/plugins/charmap/images'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/plugins/charmap/jscripts'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/plugins/charmap/langs'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/plugins/test'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/plugins/test/css'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/plugins/test/images'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/plugins/test/langs'...
Listing './lib/python3.5/site-packages/cms_fragments/static/editarea/reg_syntax'...
Listing './lib/python3.5/site-packages/cms_fragments/templates'...
Listing './lib/python3.5/site-packages/cms_fragments/templatetags'...
Compiling './lib/python3.5/site-packages/cms_fragments/templatetags/cms_fragments_tags.py'...
***   File "./lib/python3.5/site-packages/cms_fragments/templatetags/cms_fragments_tags.py", line 35
    print dir(block.placeholder)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_cms_fragments-0.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
